# acomp-turnover

./: .env.example  .env.local  README.md  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
.next/: trace
.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @babel.js  @swc.js  clsx.js  d3-array.js  d3-color.js  d3-format.js  d3-interpolate.js  d3-path.js  d3-scale.js  d3-shape.js  d3-time-format.js  d3-time.js  decimal.js-light.js  eventemitter3.js  fast-equals.js  internmap.js  lodash.js  next.js  object-assign.js  prop-types.js  react-smooth.js  react-transition-group.js  recharts-scale.js  recharts.js  tiny-invariant.js  victory-vendor.js
.next/static/chunks/: app-pages-internals.js  webpack.js
.next/static/chunks/app/: layout.js
.next/static/webpack/: webpack.95357fd67551ccad.hot-update.js
.next/types/app/: layout.ts  page.ts
docs/: README.md
notebooks/: README.md
scripts/: up.ps1  up.sh
src/app/: globals.css  layout.tsx  page.tsx
src/components/dashboard/: TurnoverDashboard.tsx
src/components/widgets/: MetricCard.tsx
src/hooks/: useDashboard.ts
src/lib/: queries.ts  types.ts
src/project_name/: __init__.py
src/project_name/data/: loader.py  pool_client.py
src/project_name/evaluation/: __init__.py
src/project_name/models/: __init__.py
src/project_name/preprocessing/: __init__.py
tests/: conftest.py
tests/unit/: test_loader.py
(+8 files in other folders)
