[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project_name"
version = "0.1.0"
description = "One-line description of the project"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]

dependencies = [
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "requests>=2.32",
  "pandas>=2.2",
]

[project.optional-dependencies]
ml = [
  "torch>=2.0",
  "scikit-learn>=1.4",
  "transformers>=4.40",
  "numpy>=1.26",
  "pandas>=2.2",
  "polars>=0.20",
]
api = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-mock>=3.12",
  "ruff>=0.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -q"
markers = [
  "slow: marks tests as slow (deselect with '-m not slow')",
  "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
